 set the Resolutions column appropriately.
 * Fixed bug in functions.php: for the 'closed' status (and the now invalid
 'thanks' and 'wontfix' statuses), the message is correctly set, instead of
 set to the message belonging to the icon.
 * Added optional $silent argument to db_query() to not output anything if the
 query fails.

--- LikeBack v1.2 released ---

2009-05-04 (dazjorz)
 * Added resetting all Smarty caches in the upgrade script.
 * Fixed the sendReminders cron script to correctly find itself in the
 LikeBack directory and load all other files, including Smarty templates.
 * Fixed the sendReminders cron script if a developer didn't have his e-mail
 address set.
 * Added LIKEBACK_URL configuration option (the cron script couldn't figure it
 out by itself, of course.)
 * Commented out "you can turn this e-mail off" in reminders.tpl, because you
 can't, yet.
 * Fixed "nothing to change" warning if the comment status wasn't changed and
 the comment wasn't sent to the author.

2009-04-29 (dazjorz)
 * Fixed remaining magic_quotes_gpc workarounds and removed
 fix_magic_quotes.php inclusion.
 * Made options.tpl display both the message and the icon using the 'message'
 modifier.
 * The locale cell is now further away from the type cell on the settings
 page, "all other locales" is above all locales and there's a <hr/> dividing "all
 others" and the list of locales.
 * Removed the subBar() function from functions.inc.php.
 * Made the code in view.php a little more clear.

2009-04-28 (dazjorz)
 * Fixed stats.php to make a list of all types, sorted by the order as
 returned by validTypes, without leaving types out.
 * Added to stats.php to do the same with statuses.
 * Added to stats.php to get the number of developers and developers with
 e-mail address set.
 * Added a nice Smarty template for stats.php so the page looks a lot better.
 * Added stats.php to lbinfo in lbheader.tpl.
 * Added a little notice on simply replying to devremark.tpl.