@@ -73,12 +73,13 @@ if( db_count_results( $tables ) > 0 )
     CREATE TABLE `LikeBackResolutions` (
       `id`        TINYINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
       `printable` VARCHAR( 50 )    NOT NULL,
+      `icon`      VARCHAR( 50 )    NOT NULL,
     );
   ");
   echo mysql_error() . "<br/>";
 
-  db_query("INSERT INTO `LikeBackResolutions` ( `printable` )
-            VALUES ( 'Solved' ), ( 'Invalid' ), ( 'Won\'t fix' ), ( 'Thanks' )");
+  db_query("INSERT INTO `LikeBackResolutions` ( `printable`, `icon` )
+            VALUES ( 'Solved', 'solved.png' ), ( 'Invalid', 'invalid.png' ), ( 'Won\'t fix', 'invalid.png' ), ( 'Thanks', 'solved.png' )");
   echo mysql_error() . "<br/>";
 ?>
 Installation done.
