@@ -32,6 +32,7 @@ die("Upgrading to LikeBack 1.3.");
 if( !db_query("CREATE TABLE `LikeBackResolutions` (
                  `id`        TINYINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
                  `printable` VARCHAR( 50 )    NOT NULL,
+                 `icon`      VARCHAR( 50 )    NOT NULL,
                );") )
 {
   die( "Couldn't create a LikeBackResolutions table: " . mysql_error() );
@@ -39,7 +40,7 @@ if( !db_query("CREATE TABLE `LikeBackResolutions` (
 
 // Insert some standard resolutions
 if( !db_query("INSERT INTO `LikeBackResolutions` ( `printable` )
-  VALUES ( 'Solved' ), ( 'Invalid' ), ( 'Won\'t fix' ), ( 'Thanks' )") )
+  VALUES ( 'Solved', 'solved.png' ), ( 'Invalid', 'invalid.png' ), ( 'Won\'t fix', 'invalid.png' ), ( 'Thanks', 'solved.png' )");
 {
   die( "Couldn't give LikeBackResolutions its initial content: " . mysql_error() );
 }
